--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,8 @@
 
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
+
     -->
+    <script src="lib/jquery-3.6.0.min.js"></script>
   </body>
 </html>
